--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 
+spring.datasource.url= jdbc:mysql://localhost:3306/bankingapifullstack
+spring.datasource.username=root
+spring.datasource.password=Jul!ana5
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.testWhileIdle = true
+spring.datasource.validationQuery = SELECT 1
+spring.jpa.show-sql=true
+spring.jpa.hibernate.use-new-id-generator-mappings=false
+spring.jpa.hibernate.ddl-auto = update
+
