--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
-
 spring.datasource.url= jdbc:mysql://localhost:3306/bankingapifullstack
 spring.datasource.username=root
-spring.datasource.password=Jul!ana5
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
