--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 spring.datasource.url= jdbc:mysql://localhost:3306/bankingapifullstack
 spring.datasource.username=root
 spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.testWhileIdle = true
-spring.datasource.validationQuery = SELECT 1
-spring.jpa.show-sql=true
-spring.jpa.hibernate.use-new-id-generator-mappings=false
-spring.jpa.hibernate.ddl-auto = update
-
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.globally_quoted_identifiers=false
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
