--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url= jdbc:mysql://localhost:3306/bankingapifullstack
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=Kasamba2001
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=false
